# TaskManager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
taskmanager/: auth.py  config.py  database.py  dependencies.py  main.py  schemas.py  service.py
taskmanager/repositories/: auth_repository.py  redis_repository.py  task_repository.py
