[tool.poetry]
name = "taskmanager"
version = "0.1.0"
description = ""
authors = ["Igor <iiigorrr@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.115.4"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pre-commit = "^4.0.1"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
